contrast and overflow fixes

--- a/custom.css
+++ b/custom.css
@@ -1,9 +1,14 @@
 :root {
-    --custom-1: #EDAE4E;
+    --custom-1: #6E5D45;
     --custom-2: #F79E52;
     --custom-3: #E08155;
     --custom-4: #F76E52;
     --custom-5: #ED524E;
+}
+
+body {
+    margin: 2vw auto;
+    max-width: 60rem;
 }
 
 em {
@@ -33,7 +38,7 @@ label input {
 }
 
 li, p {
-    max-width: 90ch;
+    max-width: 65ch;
 }
 
 pre {
