--- a/style.css
+++ b/style.css
@@ -201,6 +201,8 @@ nav ul {
     display: flex;
     justify-content: space-evenly;
     list-style-type: none;
+    padding-left: 0;
+    white-space: nowrap;
 }
 
 nav a {
@@ -234,7 +236,7 @@ button,
     font-size: inherit;
     font-weight: bold;
     margin-bottom: 1em;
-    padding: 0.75rem 1.5rem;
+    padding: 0.75rem 1.25rem;
     text-transform: uppercase;
 }
 
